--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "npm run lint:format && npm run lint:fix "
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-hash-link": "^2.4.3"
