--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@modyqyw/vite-plugin-eslint": "3.1.5",
