--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "focus-trap-react": "^10.1.1",
     "formik": "^2.2.9",
     "react": "18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "18.2.0",
     "react-router-hash-link": "^2.4.3",
     "yup": "^1.0.2"
