--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "18.2.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-router-hash-link": "^2.4.3",
     "yup": "^1.0.2"
   },
