--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "npm run lint:format && npm run lint:fix "
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "focus-trap-react": "^10.1.1",
     "formik": "^2.2.9",
     "react": "18.2.0",
